kubernetes-manifests/production/ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ubuntu
  name: ubuntu
spec:
  containers:
  - image: ubuntu
    name: ubuntu 
    command:
    - "sleep"
    - "infinity"
    resources:
      requests:
        memory: "256Mi"
        cpu: "250m"
      limits:
        memory: "512Mi"
        cpu: "500m"
     
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
