kubernetes-manifests/production/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  # this is used by external-dns to extract DNS names
  - "hello-demo.shawnk8s.com" 
  gateways:
  - gateway/hello-demo-gateway
  http:
  - route:
    - destination:
        host: go-hello-demo-external
        port:
          number: 80
